# streamloots-obs-plugin

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  CustomInstalls.txt  LICENSE  Makefile  README.md  TERMS  buildspec.json  getting-started.md
.github/actions/build-plugin/: action.yml
.github/actions/package-plugin/: action.yml
.github/scripts/: Build-Windows.ps1  check-cmake.sh  check-format.sh
.github/scripts/utils.pwsh/: Setup-Libs.ps1
.github/workflows/: main.yml
build_x86/: CMakeCache.txt
ci/windows/: install-qt-win.cmd  prepare-cppws.cmd  prepare-windows.cmd
cmake/: ObsPluginHelpers.cmake
cmake/bundle/windows/: installer-Windows.iss.in
data/locale/: en-US.ini  es-ES.ini
installer/: installer-Windows.iss.in
plugin_x86/: CMakeCache.txt
src/: Config.cpp  Config.hpp  WSServer.cpp  WSServer.h  plugin-macros.h.in  plugin-main.c  plugin-main.cpp
src/forms/: settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
src/requests/: DisplayImageRequest.cpp  DisplayVideoRequest.cpp  HideCameraRequest.cpp  PressKeyRequest.cpp  RequestBase.cpp  RequestTypes.cpp  RotateCameraRequest.cpp
src/requests/include/: DisplayImageRequest.hpp  DisplayVideoRequest.hpp  HideCameraRequest.hpp  PressKeyRequest.hpp  RequestBase.hpp  RequestTypes.hpp  RotateCameraRequest.hpp
src/requests/utils/: metadata.hpp
src/responses/: Response.cpp  ResponseError.cpp
src/responses/include/: Response.hpp  ResponseError.hpp
src/server/: WSRequest.cpp  WSRequest.h  WSServer.cpp  WSServer.h
src/server/include/: WSRequest.hpp  WSServer.h
src/use-case/: DisplayImage.cpp  DisplayImage.h  DisplayVideo.cpp  HideCamera.cpp  HideCamera.h  PressKey.cpp  PressKey.h  RotateCamera.cpp  RotateCamera.h  UseCaseManager.cpp  UseCaseManager.h  utils.h
src/use-case/include/: DisplayImage.hpp  DisplayVideo.hpp  HideCamera.hpp  PressKey.hpp  RotateCamera.hpp  UseCaseManager.hpp
src/use-case/utils/: getSceneItemInScene.hpp
src/utils/: scene_manager.h  timers.h  transforms.h
